--- a/day5,6,7/style.css
+++ b/day5,6,7/style.css
@@ -25,11 +25,11 @@ button {
 /* NAVBAR */
 
 nav {
+  padding: 15px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: white;
-  padding: 15px 20px;
   position: fixed;
   left: 0;
   top: 0;
@@ -37,6 +37,9 @@ nav {
   z-index: 100;
   transition: 0.5s;
   font-family: "Lato", sans-serif;
+}
+
+.navbar {
 }
 
 .nav-items {
@@ -58,11 +61,6 @@ nav a {
   text-decoration: none;
   color: black;
 }
-
-/* .nav-item:hover {
-  background-color: white;
-  color: black;
-} */
 
 .logo {
   display: flex;
