--- a/day5,6,7 ecommerce/style.css
+++ b/day5,6,7 ecommerce/style.css
@@ -29,14 +29,15 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: white;
+  background-color: rgba(19, 26, 34, 0.7);
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   z-index: 100;
   transition: 0.5s;
-  font-family: "Lato", sans-serif;
+  font-family: "Rubik", sans-serif;
+  color: #c1c7c9;
 }
 
 .nav-items {
@@ -54,9 +55,38 @@ nav {
   border-radius: 10px;
 }
 
+.current-page {
+  background-color: black;
+  border-radius: 100px;
+  padding: 10px;
+}
+
+.nav-search {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 10px;
+}
+
+.nav-search input {
+  border-radius: 100px;
+  border-color: transparent;
+  padding: 0 5px;
+  width: 70%;
+}
+
+.nav-search input:focus {
+  outline: none;
+}
+
+.nav-search button {
+  background-color: transparent;
+  padding: 0 15px;
+}
+
 nav a {
   text-decoration: none;
-  color: black;
+  color: rgba(193, 199, 201, 1);
 }
 
 .logo {
@@ -82,7 +112,8 @@ nav a {
   transform-style: preserve-3d;
   overflow-y: scroll;
   overflow-x: hidden;
-  font-family: "Lato", sans-serif;
+  font-family: "Rubik", sans-serif;
+  background-color: #e7e8e9;
 }
 
 .header {
@@ -123,20 +154,28 @@ nav a {
   border: none;
   border-radius: 500px;
   text-decoration: none;
-  transition: 1s all;
   margin-top: 10px;
+  background-color: #fff;
+  color: black;
+  transition: 0.3s all;
 }
 
 .browse-btn:hover {
-  transform: translateX(15px);
-  transition: 1s all;
   cursor: pointer;
+  background-color: #131a22;
+  color: white;
+}
+
+/* CAROUSEL */
+.carousel-container {
+  /* height: 400px; */
+  background-color: #e7e8e9;
 }
 
 /* PRODUCTS SECTION */
 
 .products {
-  background-color: white;
+  background-color: #e7e8e9;
 }
 
 .items {
@@ -150,10 +189,25 @@ nav a {
 
 .item {
   position: relative;
+  overflow: hidden;
+}
+.item p {
+  font-size: 15px;
+  margin-top: 10px;
+  margin-bottom: 0;
 }
 
 .item img {
-  filter: contrast(50%);
+  transition: 0.3s;
+  filter: contrast(70%);
+}
+
+.item:hover img {
+  transform: scale(1.1);
+  filter: contrast(100%);
+}
+.item:hover {
+  cursor: pointer;
 }
 
 .item-content {
@@ -168,7 +222,7 @@ nav a {
   flex-direction: column;
 }
 
-.item-btn {
+/* .item-btn {
   font-size: 15px;
   padding: 2px 30px;
   border-radius: 100px;
@@ -176,7 +230,7 @@ nav a {
 }
 .item-btn:hover {
   cursor: pointer;
-}
+} */
 
 /* LIMITED EDITION SECTION */
 
@@ -242,13 +296,29 @@ nav a {
 /* FOOTER */
 
 footer {
+  background-color: #131a22;
+  color: #c1c7c9;
+  padding: 40px;
+  position: relative;
+}
+
+.footer-arrow {
+  position: absolute;
+  right: 40px;
+  bottom: 20px;
+}
+
+.footer-content {
   display: flex;
   justify-content: center;
-  padding: 80px;
   margin: auto;
-  background-color: rgb(225, 224, 224);
-  color: black;
   flex-wrap: wrap;
+}
+
+.footer-copyright {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 13px;
 }
 
 footer p {
@@ -256,7 +326,7 @@ footer p {
 }
 
 footer h2 {
-  font-size: 23px;
+  font-size: 20px;
 }
 
 footer ul {
@@ -266,13 +336,13 @@ footer ul {
 
 footer li {
   list-style: none;
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .subscribe-btn {
   padding: 5px 20px;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   margin-top: 10px;
   font-size: 15px;
 }
@@ -280,6 +350,14 @@ footer li {
 .company {
   width: 30%;
 }
+footer a {
+  text-decoration: none;
+  color: #c1c7c9;
+}
+.company p {
+  font-size: 20px;
+}
+
 .company-logo {
   display: flex;
   align-items: center;
